--- a/samples/HelloWorld/proj/cmake/CMakeLists.txt
+++ b/samples/HelloWorld/proj/cmake/CMakeLists.txt
@@ -3,7 +3,7 @@ set( CMAKE_VERBOSE_MAKEFILE ON )
 
 project( HelloWorld )
 
-get_filename_component( CINDER_PATH "${CMAKE_CURRENT_SOURCE_DIR}/../../../../../.." ABSOLUTE )
+get_filename_component( CINDER_PATH "${CMAKE_CURRENT_SOURCE_DIR}/../../../../../Cinder" ABSOLUTE )
 get_filename_component( APP_PATH "${CMAKE_CURRENT_SOURCE_DIR}/../../" ABSOLUTE )
 
 include( "${CINDER_PATH}/proj/cmake/modules/cinderMakeApp.cmake" )
@@ -11,5 +11,5 @@ include( "${CINDER_PATH}/proj/cmake/modules/cinderMakeApp.cmake" )
 ci_make_app(
 	SOURCES     ${APP_PATH}/src/HelloWorldApp.cpp
 	CINDER_PATH ${CINDER_PATH}
-	BLOCKS		NanoVG
+	BLOCKS		../../../../../Cinder-NanoVG
 )
